Update Artist JSON loading routine.

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 <script src="record-app.js"></script>
 <script>
     function clearData() {
-        localStorage.clear();
+        localStorage.removeItem('artistList');
         location.assign('/index.html');   
     }
 </script>
