Change record page format.

--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
         <div class="starter-template">
         
             <div>
-                <p>If you are having problems with the record data click on the button below to clear the local storage:</p>
+                <p>Every now and then I update the Record DB data, so if you want to see the latest content, click below:</p>
             </div>
-            <input type="button" class="btn btn-primary rounded mb-2" id="showButton" onclick="clearData()" value="Clear local storage" />
+            <input type="button" class="btn btn-primary rounded mb-2" id="showButton" onclick="clearData()" value="Update content" />
 
 </div><!-- starter-template -->
 </div><!-- /.container -->
