Add fixed width to Biography images.

--- a/record.html
+++ b/record.html
@@ -20,7 +20,10 @@
             /* width: 60rem; */
             font-size: small;
         }
-
+        img {
+            width: 200px;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
