--- a/record.html
+++ b/record.html
@@ -22,7 +22,7 @@
         }
         img {
             width: 200px;
-            padding: 10px;
+            padding: 0 5px 5px 5px;
         }
     </style>
 </head>
