--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin-top: 3rem;
         }
     </style>
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
     <header>
