--- a/record.html
+++ b/record.html
@@ -25,6 +25,7 @@
             padding: 0 5px 5px 5px;
         }
     </style>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
     <header>
